--- a/ProjetoAplicadoBancodeTalentos/css/styleIndex.css
+++ b/ProjetoAplicadoBancodeTalentos/css/styleIndex.css
@@ -10,15 +10,8 @@ body {
   header {
     background-color: #333;
     color: #fff;
-    padding: 60px;
+    padding: 0px;
     text-align: center;
-  }
-
-  #imagemlogo {
-    position:absolute;
-    top:10px;
-    right: 590px;
-    left: 590px;
   }
   
   nav {
@@ -41,6 +34,16 @@ body {
   section {
     flex: 1; 
     padding: 20px;
+  }
+
+  section h3 {
+    color:dodgerblue;
+    font-family: 'Franklin Gothic Medium';
+    font-size: 20px;
+    font-weight: bold;
+    font-style: italic;
+    text-align: center;
+    line-height: normal;
   }
   
   footer {
