--- a/ProjetoAplicadoBancodeTalentos/css/styleSobre.css
+++ b/ProjetoAplicadoBancodeTalentos/css/styleSobre.css
@@ -41,8 +41,9 @@ body {
   section {
     flex: 1; 
     padding: 20px;
+    text-align: justify;
   }
-  
+
   footer {
     background-color: #333;
     color: #fff;
